# ai_logger

./: .gitignore  AGENTS.md  COMMANDS.md  README.md  pyproject.toml
deploy/graylog/: .env.example  README.md  check-graylog.ps1  create-gelf-http-input.ps1  docker-compose.yml  start-graylog.ps1  stop-graylog.ps1
deploy/windows/: README.md  check.ps1  env.example.ps1  install.ps1  start-server.ps1  stop-server.ps1
docs/: adapter-manifest.json  agent-install.md  client-adapters.md  ingest-protocol.md  llm-log-search.md  server-deploy-manifest.json  server-deploy.md
patterns/: DEVELOPMENT_TOOL_PRODUCT_BOUNDARIES.md  PROJECT_DOCUMENTATION_LAYERS.md  PROJECT_MEMORY_SPECIFICATIONS.md
patterns/AGENTS_RUNTIME/: 04-content-and-authoring.md  06-tool-usage-and-token-economy.md
src/ai_logger/: __init__.py  aggregator.py  client.py  client_check.py  config.py  context.py  graylog_check.py  levels.py  llm.py  log_query.py  log_search.py  log_search_cli.py  log_search_providers.py  logger.py  logging_adapter.py  plugins.py  records.py  server.py  server_check.py  tool_logging.py  web.py
temp/client-config/: ai-logger-client.env.ps1  ai-logger-local-jsonl.env.ps1
tests/: test_client_adapters.py  test_client_check.py  test_client_server.py  test_graylog_check.py  test_log_query.py  test_log_search.py  test_logging_core.py  test_server_check.py
tools/: AGENT_RUNBOOK.md
tools/project-memory/: instruction-kit.json
tools/project-memory/specs/: logging-architecture.md  technology-stack.md
tools/summary/: 2026-07-06_13-39-01_AGENT_WORK_SUMMARY.md
(+2 files in other folders)
