[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-logger"
version = "0.1.0"
description = "Universal plugin-based logging core for AI and automation projects."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Dimosfil" }]
license = { text = "MIT" }
keywords = ["logging", "observability", "plugins"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Logging",
]

[project.scripts]
ai-logger-server = "ai_logger.server:main"
ai-logger-client-check = "ai_logger.client_check:main"
ai-logger-server-check = "ai_logger.server_check:main"
ai-logger-graylog-check = "ai_logger.graylog_check:main"
ai-logger-log-search = "ai_logger.log_search_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
